@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -11,7 +12,7 @@
 
     <groupId>com.walmartlabs.concord</groupId>
     <artifactId>parent</artifactId>
-    <version>1.94.1-SNAPSHOT</version>
+    <version>1.96.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -77,10 +78,14 @@
         <docker.plugin.version>0.38.1</docker.plugin.version>
         <jooq.version>3.13.4</jooq.version>
         <junit.version>5.8.2</junit.version>
-        <liquibase.version>3.5.1</liquibase.version> <!-- the newer versions (up to 3.5.3) have incorrect mappings for PG's blob/bytea -->
+        <liquibase.version>3.5.1
+        </liquibase.version> <!-- the newer versions (up to 3.5.3) have incorrect mappings for PG's blob/bytea -->
         <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
         <node.version>16.13.1</node.version>
         <frontend.plugin.version>1.12.0</frontend.plugin.version>
+
+        <!-- used in profiles -->
+        <failsafe.args/>
     </properties>
 
     <dependencyManagement>
@@ -169,8 +174,8 @@
                 </executions>
                 <configuration>
                     <rules>
-                        <banDuplicatePomDependencyVersions />
-                        <requireUpperBoundDeps />
+                        <banDuplicatePomDependencyVersions/>
+                        <requireUpperBoundDeps/>
                         <requireMavenVersion>
                             <version>3.6.3</version>
                         </requireMavenVersion>
@@ -193,6 +198,9 @@
                     <groupId>io.fabric8</groupId>
                     <artifactId>docker-maven-plugin</artifactId>
                     <version>${docker.plugin.version}</version>
+                    <configuration>
+                        <containerNamePattern>%e</containerNamePattern>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.jooq</groupId>
@@ -202,7 +210,7 @@
                 <plugin>
                     <groupId>io.takari.maven.plugins</groupId>
                     <artifactId>takari-lifecycle-plugin</artifactId>
-                    <version>1.13.7</version>
+                    <version>2.0.8</version>
                     <extensions>true</extensions>
                     <configuration>
                         <source>${maven.compiler.source}</source>
@@ -243,6 +251,7 @@
                             <include>**/*ITCase.java</include>
                             <include>**/Test*.java</include>
                         </includes>
+                        <argLine>${failsafe.args}</argLine>
                     </configuration>
                     <executions>
                         <execution>
@@ -491,15 +500,72 @@
             </distributionManagement>
         </profile>
         <profile>
-            <id>jdk11</id>
+            <id>jdk8</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <properties>
-                <jdk.version>11.0</jdk.version>
+                <jdk.version>1.8</jdk.version>
+                <jdk.url>
+                    https://github.com/adoptium/temurin8-binaries/releases/download/jdk8u332-b09/OpenJDK8U-jdk_x64_linux_hotspot_8u332b09.tar.gz
+                </jdk.url>
             </properties>
         </profile>
         <profile>
-            <id>jdk16</id>
+            <id>jdk8-aarch64</id>
             <properties>
-                <jdk.version>16</jdk.version>
+                <!-- there are no Adoptium JDK 8 builds for aarch8, use Azul Zulu instead -->
+                <jdk.url>
+                    https://cdn.azul.com/zulu-embedded/bin/zulu8.62.0.19-ca-jdk8.0.332-linux_aarch64.tar.gz
+                </jdk.url>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk11</id>
+            <properties>
+                <jdk.version>11.0</jdk.version>
+                <jdk.url>
+                    https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.15%2B10/OpenJDK11U-jdk_x64_linux_hotspot_11.0.15_10.tar.gz
+                </jdk.url>
+                <failsafe.args>
+                    --add-opens java.base/java.util=ALL-UNNAMED
+                </failsafe.args>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk11-aarch64</id>
+            <properties>
+                <jdk.version>11.0</jdk.version>
+                <jdk.url>
+                    https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.15%2B10/OpenJDK11U-jdk_aarch64_linux_hotspot_11.0.15_10.tar.gz
+                </jdk.url>
+                <failsafe.args>
+                    --add-opens java.base/java.util=ALL-UNNAMED
+                </failsafe.args>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk17</id>
+            <properties>
+                <jdk.version>17</jdk.version>
+                <jdk.url>
+                    https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.3%2B7/OpenJDK17U-jdk_x64_linux_hotspot_17.0.3_7.tar.gz
+                </jdk.url>
+                <failsafe.args>
+                    --add-opens java.base/java.util=ALL-UNNAMED
+                </failsafe.args>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk17-aarch64</id>
+            <properties>
+                <jdk.version>17</jdk.version>
+                <jdk.url>
+                    https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.3%2B7/OpenJDK17U-jdk_aarch64_linux_hotspot_17.0.3_7.tar.gz
+                </jdk.url>
+                <failsafe.args>
+                    --add-opens java.base/java.util=ALL-UNNAMED
+                </failsafe.args>
             </properties>
         </profile>
     </profiles>
